Attempting to fix submit button styling on safari mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -252,6 +252,7 @@ form {
 	color: #FFF;
 	-webkit-appearance: none;
 	-moz-appearance: none;
+	appearance: none;
 }
 
 #submit:hover {
